syntax = "proto3";
option csharp_namespace = "BeaconTower.Protocol";
package BeaconTower;



message NullResponse{

}